Test/errors/err_temp_field_store.cb
// Storing an owning field extracted from an `alias` (borrow) by-value temp into a longer-lived slot
// must be rejected: a borrow accessor's temp does not own the field buffer (the list still owns it),
// so a shallow copy into a second owner double-frees at teardown. The fix is '.copy()'. A `move`/plain
// OWNING return instead does an implied move (the temp owns the field) - see test_collection_leaks.cb.
// (Under the three-form model a plain non-move return is OWNING; only `alias` is a borrow.)
import "string.cb";
import "list.cb";

struct Tok { string text = default; };
struct Box { string slot = default; };

extern int main()
{
    list<Tok> toks = default;
    Tok t = default; t.text = "x" + "y"; toks.add(t);
    expect_error("taken from a temporary");
    Box b = default;
    b.slot = toks.get(0).text;       // REJECTED - field of an alias borrow, use .copy()
}
